--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
     "remark": "^12.0.1",
-    "remark-html": "^11.0.2"
+    "remark-html": "^11.0.2",
+    "styled-components": "^5.1.1"
   }
 }
