--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "date-fns": "^2.15.0",
+    "framer-motion": "^2.1.2",
     "gray-matter": "^4.0.2",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
     "remark": "^12.0.1",
-    "remark-html": "^11.0.2",
-    "styled-components": "^5.1.1"
+    "remark-html": "^11.0.2"
   }
 }
